--- a/assets/css/game-information.css
+++ b/assets/css/game-information.css
@@ -14,6 +14,13 @@ body {
     height: 100%;
 }
 
+a {
+    color: rgb(141, 157, 250);
+}
+a:hover {
+    color: rgb(186, 194, 243);
+}
+
 .image-container {
     display: flex;
     flex-direction: column;
@@ -47,7 +54,7 @@ body {
 }
 
 .news-card {
-    background-color: rgb(126, 126, 126);
+    background-color: rgb(87, 87, 87);
     padding: 0 0.5rem;
     width: 98%;
     margin: 0 auto;
